--- a/index.html
+++ b/index.html
@@ -11,46 +11,40 @@
     <title>New York City</title>
     <!-- The Cesium library. -->
     <script src="ThirdParty/Cesium/Cesium.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
     <style>@import url(ThirdParty/Cesium/Widgets/widgets.css);</style>
     <link rel="stylesheet" href="index.css" media="screen">
+
+    <style>
+    .backdrop {
+        display: inline-block;
+        background: rgba(242, 242, 242, 0.7);
+        border-radius: 5px;
+        border: 1px solid #444;
+        padding: 5px 10px;
+        color: #fff;
+        line-height: 150%;
+        font-size: small;
+        width: 400px;
+    }
+    #menu {
+    position: absolute;
+    left: 10px;
+    top: 10px;
+}
+
+    </style>
 </head>
 <body>
 <!-- A container for the Cesium Viewer to live in. -->
+
 <div id="cesiumContainer"></div>
 
-<!-- Some input elements for our application. -->
-<div class="backdrop" id="menu">
-    <h2>Sample NYC Geocaches</h2>
-    <span><strong>Camera Mode</strong></span>
-    <div class="nowrap">
-        <input id="freeMode" name="source" type="radio" checked/>
-        <label for="freeMode">Free</label>
-    </div>
-    <div class="nowrap">
-        <input id="droneMode" name="source" type="radio"/>
-        <label for="droneMode">Drone View</label>
-    </div>
-    <br>
-    <span><strong>3d Tile Styling</strong></span>
-    <div class="nowrap">
-        <select id="tileStyle">
-            <option value="none">None</option>
-            <option value="height">Height</option>
-            <option value="transparent">Transparent</option>
-        </select>
-    </div>
-    <br>
-    <span><strong>Display Options</strong></span>
-    <div class="nowrap">
-        <input id="shadows" type="checkbox"/>
-        <label for="shadows">Shadows</label>
-    </div>
+<div class="backdrop" id=menu>
+<canvas id=speedg ></canvas>
+<canvas id=altg ></canvas>
 
-    <div class="nowrap">
-        <input id="neighborhoods" type="checkbox" checked/>
-        <label for="neighborhoods">Neighborhoods</label>
-    </div>
-    <br>
+
 </div>
 <div id="loadingIndicator" class="cover">
     <div id="loadingIcon" class="loadingIndicator"></div>
