--- a/index.html
+++ b/index.html
@@ -8,32 +8,13 @@
     <!-- Make the application on mobile take up the full browser screen and disable user scaling. -->
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <title>New York City</title>
+    <title>GPX 3d</title>
     <!-- The Cesium library. -->
     <script src="ThirdParty/Cesium/Cesium.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
     <style>@import url(ThirdParty/Cesium/Widgets/widgets.css);</style>
     <link rel="stylesheet" href="index.css" media="screen">
 
-    <style>
-    .backdrop {
-        display: inline-block;
-        background: rgba(242, 242, 242, 0.7);
-        border-radius: 5px;
-        border: 1px solid #444;
-        padding: 5px 10px;
-        color: #fff;
-        line-height: 150%;
-        font-size: small;
-        width: 400px;
-    }
-    #menu {
-    position: absolute;
-    left: 10px;
-    top: 10px;
-}
-
-    </style>
 </head>
 <body>
 <!-- A container for the Cesium Viewer to live in. -->
