--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 </div>
 
 <!-- Our application code. -->
+<script src="Source/graphs.js"></script>
 <script src="Source/App.js"></script>
 
 </body>
